# for-loop-iterator

./: Cargo.toml  README.md
goop/: Cargo.toml
src/: lib.rs  test.rs
